.opsera-chennai-flood-01/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opsera-chennai-flood-01-dev
  labels:
    app: chennai-flood-01
    tenant: opsera
    environment: dev
    managed-by: opsera
