.opsera-chennai-flood-01/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chennai-flood-01
  namespace: opsera-chennai-flood-01-dev
  labels:
    app: chennai-flood-01
    tenant: opsera
    managed-by: opsera
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: opsera-chennai-flood-01-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chennai-flood-01
                port:
                  number: 80
